--- a/sheying.html
+++ b/sheying.html
@@ -5,8 +5,8 @@
     <title>时尚摄影</title>
     <link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href="//cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="bootstrap.min.css" rel="stylesheet">
-    <link href="main.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -176,8 +176,8 @@
     </div>
 </footer>
 <!--脚步结束-->
-<script src="jquery-2.2.4.min.js"></script>
-<script src="bootstrap.min.js"></script>
+<script src="js/jquery-2.2.4.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script type="text/javascript">
     $('.carousel').carousel({ interval: 3000});
 </script>
